--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "com.example.bottom_bar"
+        applicationId "com.example.FinalNOTIST"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
